name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.*
                  , hjsmin == 0.2.*
                  , text == 1.2.*
                  , bytestring == 0.10.*
  ghc-options:      -threaded
  default-language: Haskell2010
